--- a/app/views/user_templates/index.html.erb
+++ b/app/views/user_templates/index.html.erb
@@ -16,7 +16,9 @@
         <%= a_user.username %>
       </td>
       <td>
-        Show details
+        <a href="/users/<%= a_user.username %>">
+          Show details
+        </a>
       </td>
     </tr>
   <% end  %>
