--- a/app/views/photo_templates/index.html.erb
+++ b/app/views/photo_templates/index.html.erb
@@ -1,5 +1,19 @@
 <h1>List of Photos</h1>
 
+<form action="/insert_photo">
+
+  <label for="image_box">Image</label>
+  <input id="image_box" type="text" name="query_image">
+
+  <label for="caption_box">Caption</label>
+  <textarea id="caption_box" type="text" name="query_caption"></textarea>
+
+  <label for="owner_id_box">Owner ID</label>
+  <input id="owner_id_box" type="text" name="query_owner_id">
+
+  <button>Add photo</button>
+</form>
+
 <table border="1">
 
   <tr>
