Add new comment works

--- a/app/views/photo_templates/show.html.erb
+++ b/app/views/photo_templates/show.html.erb
@@ -70,3 +70,16 @@
 </table>
 
 <h3>Add a new comment</h3>
+
+<form action="/add_comment">
+  <label for="photo_id">Photo ID</label>
+  <input id="photo_id" type="text" name="query_photo_id" value="<%= @the_photo.id%>">
+
+  <label for="author_id">Author ID</label>
+  <input id="author_id" type="text" name="query_author_id">
+
+  <label for="comment">Comment</label>
+  <textarea id="comment" placeholder="Enter a comment..." name="query_comment"></textarea>
+
+  <button>Add comment</button>
+</form>
