Create new user functionality complete

--- a/app/views/user_templates/index.html.erb
+++ b/app/views/user_templates/index.html.erb
@@ -1,5 +1,13 @@
 <h1>List of users</h1>
 
+<form action="/add_user">
+  <label for="new_user">Username</label>
+  <input id="new_user" type="text" name="query_user">
+  <button>Add user</button>
+</form>
+
+<hr>
+
 <table border="1">
   <tr>
     <th>ID</th>
