Update user functionality done

--- a/app/views/user_templates/show.html.erb
+++ b/app/views/user_templates/show.html.erb
@@ -6,7 +6,11 @@
 
   <dt>Edit user</dt>
 
-  <dd>Form goes here</dd>
+  <form action="/update_user/<%= @the_user.username %>">
+    <label for="edit_user">Username</label>
+    <input id="edit_user" type="text" name="query_user" value="<%= @the_user.username%>">
+    <button>Update user</button>
+  </form>
 
 </dl>
 
