--- a/app/views/user_templates/show.html.erb
+++ b/app/views/user_templates/show.html.erb
@@ -35,7 +35,7 @@
     </td>
     <td><%= a_photo.caption%></td>
     <td><%= a_photo.created_at %></td>
-    <td>Show details</td>
+    <td><a href="/photos/<%= a_photo.id %>">Show details</a></td>
   </tr>
   <% end%>
 </table>
